--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -43,7 +43,7 @@
   width: 200px;
   height: 200px;
   object-fit: contain;
-  margin-bottom: -8px;
+  margin-bottom: -20px;
 }
 
 .title {
